--- a/themes/even_mod/source/css/_custom/_custom.scss
+++ b/themes/even_mod/source/css/_custom/_custom.scss
@@ -2,3 +2,7 @@
 // Custom style
 // ==============================
 // You can override the variables in _variables.scss to customize the style
+#msg{
+	font-size: 30px;
+	letter-spacing: 5px;
+}
